[gd_scene load_steps=3 format=3 uid="uid://b46y7lxmwfx0y"]

[ext_resource type="Script" path="res://collectables/collectable.gd" id="1_m1adu"]
[ext_resource type="PackedScene" uid="uid://crgjlw70auop1" path="res://utilities/extended_audio_stream_player.tscn" id="2_305vi"]

[node name="Collectable" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_m1adu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AttractionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttractionZone"]
disabled = true

[node name="Collect" parent="." instance=ExtResource("2_305vi")]

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true

[node name="CollectTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="AttractionZone" to="." method="_on_attraction_zone_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="CollectTimer" to="." method="_on_collect_timer_timeout"]
